Fix flickering

--- a/src/sections/home/Home.module.scss
+++ b/src/sections/home/Home.module.scss
@@ -17,7 +17,7 @@ $padding-vertical: 30px;
   .content {
     z-index: 1;
     padding: $padding-vertical 0;
-    padding-left: 100px;
+    padding-left: $section-padding-horizontal;
     padding-right: 20px;
     position: relative;
     @include flex-row;
@@ -27,7 +27,6 @@ $padding-vertical: 30px;
       @include flex-col-h-cen;
       position: absolute;
       gap: 50px;
-      margin-left: -50px;
       height: 100%;
 
       .line {
@@ -44,6 +43,7 @@ $padding-vertical: 30px;
     }
 
     .content--mid {
+      padding-left: 60px;
       display: inline-block;
       padding-top: 100px;
     }
@@ -83,9 +83,6 @@ $padding-vertical: 30px;
 @media only screen and (max-width: 600px) {
   .main-cnt {
     .content {
-      .content--left {
-        margin-left: -60px;
-      }
       .name {
         font-size: toRem(50px);
       }
